# lima-gui

./: .gitignore  LICENSE  README.md  data_config.json  openai_api.ipynb  pyproject.toml  requirement.txt  requirements.txt  setup.py
examples/: chatgpt_chats.csv  chatgpt_chats.jsonl  data_loading.ipynb  function_calling.csv  function_calling.jsonl
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.css
frontend/src/components/: ChatList.jsx  Header.jsx  Layout.jsx  Message.jsx  Settings.css  Settings.jsx  index.js
frontend/src/utils/: debounce.js  statusIndicator.js
lima_gui/: __init__.py  app.py  config.py  constants.py  main.py  run.py  test_chat.py  test_chat_delete_message.py  test_chat_metadata.py  test_chat_update.py  test_main.py  update_data.py
lima_gui/controller/: chat_controller.py  function_desc_controller.py  main_controller.py  openai_controller.py  settings_controller.py
lima_gui/logging/: __init__.py  decorator.py
lima_gui/model/: __init__.py  chat.py  chat_dataset.py  function.py  role.py  settings.py
lima_gui/models/: __init__.py  app_state.py  chat.py  db.py
lima_gui/routers/: __init__.py  chat.py  main.py  settings.py
lima_gui/services/: chat.py  file_service.py
lima_gui/state/: __init__.py  openai.py  settings.py
lima_gui/view/: chat_item.py  chat_item.ui  chat_widget.py  chat_widget.ui  chat_window.py  fn_parameter_widget.py  fn_parameter_widget.ui  function_call_window.py  function_desc_window.py  function_description.ui  index.html  main_window.py  main_window.ui  openai.ui  openai_window.py  param_item.ui  parameter_item.py  settings.ui  settings_window.py  ui_chat_item.py  ui_chat_widget.py  ui_fn_parameter_widget.py  ui_function_description.py  ui_main_window.py  ui_openai.py  ui_param_item.py  ui_settings.py
